# rigol-data-collector

./: LICENSE  README.md  pyproject.toml  requirements.txt
rigol_data_collector/: main.py  pathcheck_so.py  util.py
rigol_data_collector/Rigol1000z/: commands.py  rigol1000z.py
