[tool.poetry]
name = "rigol-data-collector"
version = "0.1.0"
description = ""
authors = ["Jacob Smilg <jacob@smilg.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
