[tool.poetry]
name = "rigol-data-collector"
version = "0.1.0"
description = ""
authors = ["Jacob Smilg <jacob@smilg.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
ipympl = "^0.9.3"
pandas = "^2.2.1"
zeroconf = "^0.131.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
